--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,8 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
 )
 
-#find_package(Eigen3 3.3 REQUIRED NO_MODULE)
-set(EIGEN3_INCLUDE_DIRS /usr/share/eigen)
+find_package(Eigen3 3.3 REQUIRED NO_MODULE)
+#set(EIGEN3_INCLUDE_DIRS /usr/share/eigen)
 
 add_message_files(DIRECTORY ${PROJECT_SOURCE_DIR}/msg FILES
   State.msg
